--- a/app/views/jobs/post_jobs.html.erb
+++ b/app/views/jobs/post_jobs.html.erb
@@ -12,7 +12,7 @@
 <form name="jobpostadd" action="/employee" method="post"  >	
 	<input name="authenticity_token" type="hidden" value="84fc5f10d45977c87c3ac6b88aabc0e73925cad0" />
 
-Hemant raut
+Hemant raut is heare
 	</form>
 	</body>
 </html>
