added few field to database

--- a/app/views/jobs/post_jobs.html.erb
+++ b/app/views/jobs/post_jobs.html.erb
@@ -19,7 +19,7 @@
 		<tr >
 			<td class="inputtext">Company Name</td>
 			<td class="selectbox">
-			<select name="postjob[company_name]" id="company_name">
+			<select name="postjob[company_id]" id="company_id">
 				
 			<option>--Select Company--</option>	
 				<option value="1">TCS</option>	
