job post all field entered

--- a/app/views/jobs/post_jobs.html.erb
+++ b/app/views/jobs/post_jobs.html.erb
@@ -87,6 +87,7 @@
 			<select name="postjob[passout_year]" id="passout_year">
 				
 			<option>--Select Year--</option>	
+				<option>2013</option>	
 			</select>
 			</td>
 			
@@ -100,6 +101,7 @@
 			<select name="postjob[branch]" id="branch">
 				
 			<option>--Select Branch--</option>	
+				<option>IT</option>	
 			</select>
 			</td>
 			<td class="inputtext">Degree </td>
@@ -107,6 +109,7 @@
 			<select name="postjob[degree]" id="degree">
 				
 			<option>--Select Deegree--</option>	
+				<option>BE</option>	
 			</select>
 			</td>
 		</tr>
@@ -130,6 +133,7 @@
 			<select  name="postjob[live_backlog]" id="live_backlog">
 				
 			<option>--Backlogs--</option>	
+				<option>2</option>	
 			</select>
 			</td>
 			<td class="inputtext">Dead Backlogs </td>
@@ -137,6 +141,7 @@
 			<select name="postjob[dead_backlog]" id="dead_backlog">
 				
 			<option>--Dead Backlogs--</option>	
+				<option>1</option>	
 			</select>
 			</td>
 		</tr>
@@ -146,6 +151,7 @@
 			<select name="postjob[yd]" id="yd">
 				
 			<option>--YD--</option>	
+				<option>Yes</option>	
 			</select>
 			</td>
 			<td class="inputtext"> Number of offers already</td>
@@ -153,6 +159,7 @@
 			<select name="postjob[already_offer]" id="already_offer">
 				
 			<option>--OF--</option>	
+				<option>1</option>	
 			</select>
 			</td>
 		</tr>
